--- a/voiceitt_opt/mycroft.conf
+++ b/voiceitt_opt/mycroft.conf
@@ -147,7 +147,7 @@
   // Hotword configurations
   "hotwords": {
     "speaking freely": {
-        "uri": "http://192.168.56.1:3000/hotword",
+        "uri": "http://localhost:3000/hotword",
         "module": "voiceitt",
         "lang": "en-us"
         },
@@ -198,7 +198,7 @@
   "stt": {
     "module": "voiceitt",
     "voiceitt": {
-       "spellotape_uri": "http://192.168.56.1:3000/recognize"
+       "spellotape_uri": "http://localhost:3000/recognize"
     }
   },
 
