update hotword ring buffer

--- a/voiceitt_opt/mycroft.conf
+++ b/voiceitt_opt/mycroft.conf
@@ -49,11 +49,11 @@
 
   // Mechanism used to play WAV audio files
   // Override: SYSTEM
-  "play_wav_cmdline": "paplay %1 --stream-name=mycroft-voice",
+  "play_wav_cmdline": "aplay --device=hw:0,0 %1",
 
   // Mechanism used to play MP3 audio files
   // Override: SYSTEM
-  "play_mp3_cmdline": "mpg123 %1",
+  "play_mp3_cmdline": "mpg123 -a hw:0,0 %1",
 
   // Location where the system resides
   // NOTE: Although this is set here, an Enclosure can override the value.
@@ -134,7 +134,7 @@
     "phoneme_duration": 120,
     "multiplier": 1.0,
     "energy_ratio": 1.5,
-    "wake_word": "speaking freely",
+    "wake_word": "hey mycroft",
     "stand_up_word": "wake up"
   },
 
@@ -146,8 +146,9 @@
 
   // Hotword configurations
   "hotwords": {
-    "speaking freely": {
-        "uri": "http://localhost:3000/hotword",
+    "hey mycroft": {
+        "feed": "http://localhost:3000/feed",
+        "hotword": "http://localhost:3000/hotword",
         "module": "voiceitt",
         "lang": "en-us"
         },
@@ -206,7 +207,7 @@
   // Override: REMOTE
   "tts": {
     // Engine.  Options: "mimic", "google", "marytts", "fatts", "espeak", "spdsay"
-    "module": "mimic",
+    "module": "google",
     "mimic": {
       "voice": "ap"
     },
