--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -1,12 +1,12 @@
 {
   // Definition and documentation of all variables used by mycroft-core.
-  // 
+  //
   // Settings seen here are considered DEFAULT.  Settings can also be
-  // overridden at the REMOTE level (set by the user via 
+  // overridden at the REMOTE level (set by the user via
   // https://home.mycroft.ai), at the SYSTEM level (typically in the file
   // '/etc/mycroft/mycroft.conf'), or at the USER level (typically in the
   // file '~/.mycroft/mycroft.conf').
-  // 
+  //
   // The load order of settings is:
   //   DEFAULT
   //   REMOTE
@@ -21,15 +21,15 @@
   // Code is a BCP-47 identifier (https://tools.ietf.org/html/bcp47), lowercased
   // TODO: save unmodified, lowercase upon demand
   "lang": "en-us",
-  
+
   // Measurement units, either 'metric' or 'english'
   // Override: REMOTE
   "system_unit": "metric",
-  
+
   // Time format, either 'half' (e.g. "11:37 pm") or 'full' (e.g. "23:37")
   // Override: REMOTE
   "time_format": "half",
-  
+
   // Date format, either 'MDY' (e.g. "11-29-1978") or 'DMY' (e.g. "29-11-1978")
   // Override: REMOTE
   "date_format": "MDY",
@@ -37,24 +37,24 @@
   // Whether to opt in to data collection
   // Override: REMOTE
   "opt_in": false,
-  
+
   // Play a beep when system begins to listen?
   "confirm_listening": true,
-  
+
   // File locations of sounds to play for system events
   "sounds": {
     "start_listening": "snd/start_listening.wav",
     "end_listening": "snd/end_listening.wav"
   },
-  
+
   // Mechanism used to play WAV audio files
   // Override: SYSTEM
   "play_wav_cmdline": "paplay %1 --stream-name=mycroft-voice",
-  
+
   // Mechanism used to play MP3 audio files
   // Override: SYSTEM
   "play_mp3_cmdline": "mpg123 %1",
-  
+
   // Location where the system resides
   // NOTE: Although this is set here, an Enclosure can override the value.
   //       For example a mycroft-core running in a car could use the GPS.
@@ -83,7 +83,7 @@
       "offset": -21600000
     }
   },
-  
+
   // General skill values
   "skills": {
     // Directory to look for user skills
@@ -93,13 +93,13 @@
     // Enable auto update by msm
     "auto_update": true,
     // blacklisted skills to not load
-    "blacklisted_skills": ["skill-media", "send_sms", "skill-wolfram-alpha", "spotify-skill"],
+    "blacklisted_skills": ["skill-media", "send_sms", "skill-wolfram-alpha"],
     // priority skills to be loaded first
     "priority_skills": ["skill-pairing"],
     // Minimum time since last skill updata to force an update on startup
     "startup_update_required_time": 12
   },
-  
+
   // Address of the REMOTE server
   "server": {
     "url": "https://api.mycroft.ai",
@@ -107,7 +107,7 @@
     "update": true,
     "metrics": false
   },
-  
+
   // The mycroft-core messagebus' websocket
   "websocket": {
     "host": "0.0.0.0",
@@ -115,7 +115,7 @@
     "route": "/core",
     "ssl": false
   },
-  
+
   // Settings used by the wake-up-word listener
   // Override: REMOTE
   "listener": {
@@ -134,7 +134,7 @@
     "phoneme_duration": 120,
     "multiplier": 1.0,
     "energy_ratio": 1.5,
-    "wake_word": "hey mycroft",
+    "wake_word": "speaking freely",
     "stand_up_word": "wake up"
   },
 
@@ -146,10 +146,9 @@
 
   // Hotword configurations
   "hotwords": {
-    "hey mycroft": {
-        "module": "pocketsphinx",
-        "phonemes": "HH EY . M AY K R AO F T",
-        "threshold": 1e-90,
+    "speaking freely": {
+        "uri": "http://localhost:3000/hotword",
+        "module": "voiceitt",
         "lang": "en-us"
         },
 
@@ -168,22 +167,22 @@
     // Options: 'picroft', 'mycroft_mark_1'
     // Override: SYSTEM (set by specific enclosures)
     # "platform": "picroft",
-    
+
     // COMM params to the Arduino/faceplate
     "port": "/dev/ttyAMA0",
     "rate": 9600,
     "timeout": 5.0,
-    
+
     // ??
     "update": true,
-    
+
     // Run a self test at bootup?
     "test": false
   },
 
   // Level of logs to store, one of  "CRITICAL", "ERROR", "WARNGIN", "INFO", "DEBUG"
   "log_level": "DEBUG",
-  
+
   // Messagebus types that will NOT be output to logs
   "ignore_logs": ["enclosure.mouth.viseme", "enclosure.mouth.display"],
 
@@ -197,15 +196,10 @@
   // Speech to Text parameters
   // Override: REMOTE
   "stt": {
-    // Engine.  Options: "mycroft", "google", "wit", "ibm", "kaldi", "bing",
-    //                   "houndify, deepspeech_server"
-    "module": "mycroft"
-    // "deepspeech_server": {
-    //   "uri": "http://localhost:8080/stt"
-    // },
-    // "kaldi": {
-    //   "uri": "http://localhost:8080/client/dynamic/recognize"
-    // },
+    "module": "voiceitt",
+    "voiceitt": {
+       "spellotape_uri": "http://localhost:3000/recognize"
+    }
   },
 
   // Text to Speech parameters
@@ -286,3 +280,4 @@
   },
   "debug": false
 }
+
